--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
 
   <div class="main1">
 
-    <img src="./assets/images/image-omelette.jpeg" alt="image of an omelette">
+    <img src="./image-omelette.jpeg" alt="image of an omelette">
 
     <div class="mainn">
       <h2> Simple Omelette Recipe
